#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
# AC_CONFIG_SRCDIR([nmea.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lBSDPClient':
# AC_CHECK_LIB([BSDPClient], [main])
# FIXME: Replace `main' with a function in `-lIOKit':
# AC_CHECK_LIB([IOKit], [main])
# FIXME: Replace `main' with a function in `-lexpat':
# AC_CHECK_LIB([expat], [XML_ParserCreate])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [cos])
# FIXME: Replace `main' with a function in `-lsetupapi':
# AC_CHECK_LIB([setupapi], [main])
# FIXME: Replace `main' with a function in `-lusb':
# AC_CHECK_LIB([usb], [usb_open])

AC_MSG_CHECKING(for libusb)
if test "$with_libusb" = no ; then
	AC_MSG_RESULT(check not done)
else
	AC_CHECK_LIB([usb], [usb_open])
fi

AC_MSG_CHECKING(for random stuff to make you feel better)
AC_MSG_RESULT(failed)

AC_MSG_CHECKING(for libexpat)
if test "$with_libexpat" = no ; then
	AC_MSG_RESULT(check not done)
else
	AC_CHECK_LIB([expat], [XML_ParserCreate])
fi

# Checks for header files.
AC_HEADER_STDC
# AC_CHECK_HEADERS([fcntl.h inttypes.h libintl.h limits.h malloc.h stddef.h stdint.h stdlib.h string.h strings.h sys/ioctl.h sys/time.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
# AC_C_CONST
# AC_C_INLINE
# AC_TYPE_OFF_T
# AC_TYPE_SIZE_T
# AC_HEADER_TIME
# AC_STRUCT_TM
# AC_STRUCT_TIMEZONE

# Checks for library functions.
# AC_FUNC_MALLOC
# AC_FUNC_MEMCMP
# AC_FUNC_MKTIME
# AC_FUNC_REALLOC
# AC_FUNC_SELECT_ARGTYPES
# AC_FUNC_STRFTIME
# AC_FUNC_STRTOD
# AC_FUNC_VPRINTF
# AC_CHECK_FUNCS([atexit floor localtime_r memmove memset pow select sqrt strchr strcspn strdup strerror strncasecmp strrchr strspn strstr strtol strtoul])

#AC_CONFIG_FILES([Makefile
#                 coldsync/Makefile
#                 doc/Makefile
#                 mingw/Makefile])
AC_CONFIG_FILES([Makefile])
# AC_CONFIG_HEADER(config.h)
AC_OUTPUT
